# ArgosAuth

./: package.json  vite.config.ts
migrations/: create_tables.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/auth/: auth.rs
src-tauri/src/user/: user.rs
src/Components/: index.ts
src/Components/Account/: Account.tsx
src/Components/App/Routing/: Routing.tsx
src/Components/App/Routing/Providers/types/: Paths.ts
src/Components/App/Styles/: Styles.scss
src/Components/Auth/StudentLoginForm/: StudentLoginForm.tsx
src/Components/Auth/StudentRegistration/: StudentRegistrationForm.tsx
src/Components/Home/: Home.tsx
src/Components/Shared/Link/: Link.scss
src/Components/Sidebar/: BarItems.ts  SideBar.module.scss  SideBar.tsx
src/Pages/ErrorPages/NotFound/: NotFound.module.scss
