[package]
name = "dschool"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "shell-open", "dialog-all"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "json", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.15.1"
log = "0.4.21"
chrono = {version = "0.4.37", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
